--- a/style.css
+++ b/style.css
@@ -3,10 +3,14 @@
     padding: 0;
 }
 
+body{
+    background-color: lightslategray;
+
+}
+
 .fundo{
-    background-image: 45deg,lightpink, lightblue;
     height: 100%;
-    color: white;
+    color: rgba(255, 255, 255, 0.727);
     font-family: Arial, Helvetica, sans-serif;
 }
 
